--- a/ris/pom.xml
+++ b/ris/pom.xml
@@ -8,15 +8,19 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>HomeSteadHubDV</groupId>
-	<artifactId>ris</artifactId>
+	<groupId>HomeSteadHub</groupId>
+	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ris</name>
-	<description>Demo springboot ris</description>
+	<name>demo</name>
+	<description>RIS-Projekt</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
