--- a/ris/pom.xml
+++ b/ris/pom.xml
@@ -36,6 +36,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    			<groupId>jakarta.persistence</groupId>
+    			<artifactId>jakarta.persistence-api</artifactId>
+    			<version>3.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
