--- a/ris/src/main/resources/application.properties
+++ b/ris/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.error.include-message=always
 
 spring.datasource.url=jdbc:mysql://localhost:3306/homesteaddv
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
