--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,35 +1,50 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: Java CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: homesteaddv
+          MYSQL_USER: root
+          MYSQL_PASSWORD: root
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
     - name: Set up JDK 19
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
         java-version: '19'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Wait for MySQL
+      run: |
+        until mysqladmin ping -h127.0.0.1 -uadmin -padmin --silent; do
+          echo "Waiting for database connection..."
+          sleep 2
+        done
+
+    - name: Build with Maven
+      run: mvn -f SpringBootVzpostavitev/pom.xml clean install
+
+    - name: Run tests with Maven
+      run: mvn -f SpringBootVzpostavitev/pom.xml test
