--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
         done
 
     - name: Build with Maven
-      run: mvn -f SpringBootVzpostavitev/pom.xml clean install
+      run: mvn -f demo/pom.xml clean install
 
     - name: Run tests with Maven
-      run: mvn -f SpringBootVzpostavitev/pom.xml test
+      run: mvn -f demo/pom.xml test
